# sms

./: .gitignore  .gitmodules  README.md  conda-sms.yml  pyproject.toml
SemanticMobileSearch.egg-info/: SOURCES.txt
sms/: clip_detic_legs.py  sms_config.py  sms_data_pipeline.py  sms_pipeline.py  sms_trainer.py
sms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sms/SemanticMobileSearch.egg-info/: PKG-INFO  SOURCES.txt
sms/data/: depth_dataset.py  full_images_datamanager.py  sms_dataloader.py  sms_datamanager.py  sms_dataparser.py  sms_dataset.py
sms/data/utils/: detic_dataloader.py  detic_dataloader2.py  dino_dataloader.py  dino_dataloader2.py  (+7 more)
sms/encoders/: image_encoder.py  openclip_encoder.py
sms/field_components/: gaussian_fieldheadnames.py  gaussian_lerf_fieldheadnames.py
sms/fields/: gaussian_field.py  gaussian_lerf_field.py
sms/model/: sms_gaussian_splatting.py
sms/model_components/: losses.py
sms/scripts/: .yarnrc  clip_detic_legs.py  test_clip_interp.ipynb  test_detic.ipynb  test_eval.py
sms/sms.egg-info/: SOURCES.txt
sms/tracking/: atap_loss.py  frame.py  grasp_dev_tracking.py  motion.py  observation.py  optim.py  prime_track_main.py  prime_tri_zed.py  prime_tri_zed_runner.py  realtime_track.py  rigid_group_optimizer.py  toad_object _karim.py  toad_object.py  toad_object_karim.py  track_main.py  track_main_karim.py  track_main_offline.py  track_main_offline_folder.py  track_main_prime_bowl.py  track_mp.py  tri_zed.py  utils.py  utils2.py  visualizer.py  write_track_main_offline_folder.py  zed.py
sms/ur5_interface/: setup.py
(+59 files in other folders)
